--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<HEAD>
+<head>
 <title>Todo App</title>
 <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
-</HEAD>
+<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+</head>
 <body>
 <div class="aaa"><img src="./eisenhower-matrix.jpg">
   <a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
@@ -21,7 +21,8 @@
 <li>
   <input type='checkbox'>
   <label class="task">Pay Bills</label>
-  <input type="text"><button class="edit">Edit</button>
+  <input type="text">
+  <button class="edit">Edit</button>
   <button class="delete">
     <img src="./remove.svg">
   </button>
@@ -49,6 +50,6 @@
 </li>
 </ul>
 </div>
-<script type="text/javascript" SRC="app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
