--- a/index.html
+++ b/index.html
@@ -5,48 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <div class="aaa"><img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="content">
+    <div class="header">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-          <div class="task-row-wrapper">
-            <input id="new-task"class="task" type="text">
-            <button>Add</button>
+    <div class="main">
+      <p class="add-item">
+        <label for="add-item__input-id">Add Item</label>
+          <div class="add-item__row-wrapper">
+            <input id="add-item__input-id" class="add-item__task" type="text">
+            <button class="add-item__button">Add</button>
           </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="task-header">Todo</h3>
+      <ul class="todo">
+        <li class="todo-list">
+          <input class="todo__input" type="checkbox">
+          <label class="todo__label add-item__task">Pay Bills</label>
+          <input class="todo__input" type="text">
+          <button class="todo__button todo__button-edit">Edit</button>
+          <button class="todo__button todo__button-delete">
+            <img class="todo__img" src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="todo-list-edit">
+          <input class="todo__input" type="checkbox">
+          <label class="todo__label add-item__task">Go Shopping</label>
+          <input class="todo__input add-item__task" type="text" value="Go Shopping">
+          <button class="todo__button todo__button-edit">Save</button>
+          <button class="todo__button todo__button-delete">
+            <img class="todo__img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="task-header">Completed</h3>
+      <ul class="completed">
+        <li class="todo-list-completed">
+          <input class="todo__input" type="checkbox" checked>
+          <label class="todo__label add-item__task">See the Doctor</label>
+          <input class="todo__input add-item__task" type="text">
+          <button class="todo__button todo__button-edit">Edit</button>
+          <button class="todo__button todo__button-delete">
+            <img class="todo__img" src="./remove.svg">
           </button>
         </li>
       </ul>
