refactor: 3.5 - added padding in css blocks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="main">
       <p class="add-item">
-        <label for="add-item__input-id">Add Item</label>
+        <label class="todo__label" for="add-item__input-id">Add Item</label>
           <div class="add-item__row-wrapper">
             <input id="add-item__input-id" class="add-item__task" type="text">
             <button class="add-item__button">Add</button>
@@ -29,7 +29,7 @@
             <img class="todo__img" src="./remove.svg">
           </button>
         </li>
-        <li class="todo-list-edit">
+        <li class="todo-list todo-list-edit">
           <input class="todo__input" type="checkbox">
           <label class="todo__label add-item__task">Go Shopping</label>
           <input class="todo__input add-item__task" type="text" value="Go Shopping">
@@ -41,7 +41,7 @@
       </ul>
       <h3 class="task-header">Completed</h3>
       <ul class="completed">
-        <li class="todo-list-completed">
+        <li class="todo-list todo-list-completed">
           <input class="todo__input" type="checkbox" checked>
           <label class="todo__label add-item__task">See the Doctor</label>
           <input class="todo__input add-item__task" type="text">
