refactor: 1.1 (advanced level) - added semantic tags

--- a/index.html
+++ b/index.html
@@ -6,52 +6,60 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="content">
-    <div class="header">
+    <header class="header">
       <img class="header__img" src="./eisenhower-matrix.jpg">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
+    </header>
+    <main class="main">
       <p class="add-item">
         <label class="todo__label" for="add-item__input-id">Add Item</label>
-          <div class="add-item__row-wrapper">
+          <aside class="add-item__row-wrapper">
             <input id="add-item__input-id" class="add-item__task" type="text">
             <button class="add-item__button">Add</button>
-          </div>
+          </aside>
       </p>
-      <h3 class="task-header">Todo</h3>
-      <ul class="todo">
-        <li class="todo-list">
-          <input class="todo__input" type="checkbox">
-          <label class="todo__label add-item__task">Pay Bills</label>
-          <input class="todo__input" type="text">
-          <button class="todo__button todo__button-edit">Edit</button>
-          <button class="todo__button todo__button-delete">
-            <img class="todo__img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="todo-list todo-list-edit">
-          <input class="todo__input" type="checkbox">
-          <label class="todo__label add-item__task">Go Shopping</label>
-          <input class="todo__input add-item__task" type="text" value="Go Shopping">
-          <button class="todo__button todo__button-edit">Save</button>
-          <button class="todo__button todo__button-delete">
-            <img class="todo__img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="task-header">Completed</h3>
-      <ul class="completed">
-        <li class="todo-list todo-list-completed">
-          <input class="todo__input" type="checkbox" checked>
-          <label class="todo__label add-item__task">See the Doctor</label>
-          <input class="todo__input add-item__task" type="text">
-          <button class="todo__button todo__button-edit">Edit</button>
-          <button class="todo__button todo__button-delete">
-            <img class="todo__img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+      <section>
+        <article>
+          <h3 class="task-header">Todo</h3>
+        </article>  
+        <ul class="todo">
+          <li class="todo-list">
+            <input class="todo__input" type="checkbox">
+            <label class="todo__label add-item__task">Pay Bills</label>
+            <input class="todo__input" type="text">
+            <button class="todo__button todo__button-edit">Edit</button>
+            <button class="todo__button todo__button-delete">
+              <img class="todo__img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="todo-list todo-list-edit">
+            <input class="todo__input" type="checkbox">
+            <label class="todo__label add-item__task">Go Shopping</label>
+            <input class="todo__input add-item__task" type="text" value="Go Shopping">
+            <button class="todo__button todo__button-edit">Save</button>
+            <button class="todo__button todo__button-delete">
+              <img class="todo__img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <article>
+          <h3 class="task-header">Completed</h3>
+        </article>
+        <ul class="completed">
+          <li class="todo-list todo-list-completed">
+            <input class="todo__input" type="checkbox" checked>
+            <label class="todo__label add-item__task">See the Doctor</label>
+            <input class="todo__input add-item__task" type="text">
+            <button class="todo__button todo__button-edit">Edit</button>
+            <button class="todo__button todo__button-delete">
+              <img class="todo__img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
   <script src="app.js"></script>
   </body>
 </html>
