--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="content">
     <header class="header">
-      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -29,7 +29,7 @@
             <input class="todo__input" type="text">
             <button class="todo__button todo__button-edit">Edit</button>
             <button class="todo__button todo__button-delete">
-              <img class="todo__img" src="./remove.svg">
+              <img class="todo__img" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="todo-list todo-list-edit">
@@ -38,7 +38,7 @@
             <input class="todo__input add-item__task" type="text" value="Go Shopping">
             <button class="todo__button todo__button-edit">Save</button>
             <button class="todo__button todo__button-delete">
-              <img class="todo__img" src="./remove.svg">
+              <img class="todo__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -54,7 +54,7 @@
             <input class="todo__input add-item__task" type="text">
             <button class="todo__button todo__button-edit">Edit</button>
             <button class="todo__button todo__button-delete">
-              <img class="todo__img" src="./remove.svg">
+              <img class="todo__img" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
